--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.vality</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>2.0.0-BETA-8</version>
+        <version>1.0.18</version>
     </parent>
 
     <artifactId>webhook-dispatcher</artifactId>
@@ -29,11 +29,7 @@
     </properties>
 
     <dependencies>
-        <!--rbkmoney-->
-        <dependency>
-            <groupId>dev.vality</groupId>
-            <artifactId>custom-metrics-spring-boot-starter</artifactId>
-        </dependency>
+        <!--vality-->
         <dependency>
             <groupId>dev.vality.woody</groupId>
             <artifactId>woody-thrift</artifactId>
@@ -54,10 +50,6 @@
         <dependency>
             <groupId>dev.vality</groupId>
             <artifactId>db-common-lib</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>dev.vality</groupId>
-            <artifactId>custom-actuator-endpoints</artifactId>
         </dependency>
         <dependency>
             <groupId>dev.vality.geck</groupId>
@@ -123,6 +115,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>29.0-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.msk</groupId>
+            <artifactId>aws-msk-iam-auth</artifactId>
         </dependency>
 
         <!--test-->
