add deps in pom

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.vality</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>2.0.0-BETA-8</version>
+        <version>1.0.18</version>
     </parent>
 
     <artifactId>webhook-dispatcher</artifactId>
@@ -123,6 +123,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>29.0-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.msk</groupId>
+            <artifactId>aws-msk-iam-auth</artifactId>
         </dependency>
 
         <!--test-->
