--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.vality</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>1.0.18</version>
+        <version>2.0.0-BETA-11</version>
     </parent>
 
     <artifactId>webhook-dispatcher</artifactId>
