--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,4 +7,4 @@ on:
 
 jobs:
   build:
-    uses: valitydev/java-workflow/.github/workflows/maven-service-build.yml@v2-beta
+    uses: valitydev/java-workflow/.github/workflows/maven-service-build.yml@v2
