Add log for time response

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: '@server.port@'
+  port: '${server.port}'
 
 management:
   security:
     flag: false
   server:
-    port: '@management.port@'
+    port: '${management.port}'
   metrics:
     export:
       prometheus:
@@ -24,7 +24,7 @@ management:
 
 spring:
   application:
-    name: '@project.name@'
+    name: '${project.name}'
   output:
     ansi:
       enabled: always
@@ -36,14 +36,14 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: org.postgresql.Driver
-    url: '@db.url@'
-    username: '@db.user@'
-    password: '@db.password@'
+    url: '${db.url}'
+    username: '${db.user}'
+    password: '${db.password}'
     hikari.maximum-pool-size: 10
   flyway:
     table: schema_version
     schemas: wb_dispatch
-    url: '@db.url@'
+    url: '${db.url}'
   kafka:
     bootstrap-servers: "localhost:29092"
     consumer:
