--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,8 @@ server:
   port: '${server.port}'
 
 management:
-  security:
-    flag: false
   server:
     port: '${management.port}'
-  metrics:
-    export:
-      prometheus:
-        enabled: false
   endpoint:
     health:
       show-details: always
@@ -21,6 +15,10 @@ management:
     web:
       exposure:
         include: health,info,prometheus
+  prometheus:
+    metrics:
+      export:
+        enabled: false
 
 spring:
   application:
@@ -40,10 +38,6 @@ spring:
     username: '${db.user}'
     password: '${db.password}'
     hikari.maximum-pool-size: 10
-  flyway:
-    table: schema_version
-    schemas: wb_dispatch
-    url: '${db.url}'
   kafka:
     bootstrap-servers: "localhost:29092"
     consumer:
@@ -79,12 +73,13 @@ kafka:
     last.retry: 1
     dead.letter.queue: 1
 
-merchant:
+http-client:
   timeout: 10000
   max.per.route: 20
   max.total: 1000
 
 retry:
+  nack.seconds: 5
   first.seconds: 30
   second.seconds: 600
   third.seconds: 1800
