--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.vality</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.4</version>
     </parent>
 
     <artifactId>webhook-dispatcher</artifactId>
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>dev.vality</groupId>
             <artifactId>damsel</artifactId>
+            <version>1.665-392f561</version>
         </dependency>
         <dependency>
             <groupId>dev.vality</groupId>
