--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.vality</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.4</version>
     </parent>
 
     <artifactId>webhook-dispatcher</artifactId>
@@ -30,7 +30,7 @@
     </properties>
 
     <dependencies>
-        <!--rbkmoney-->
+        <!--vality-->
         <dependency>
             <groupId>dev.vality</groupId>
             <artifactId>damsel</artifactId>
